src/RyoikiTenkai.Native/include/ryoiki_native.h

struct RyoikiHandle;
struct RyoikiCadHandle;
struct RyoikiGestureDtwDebugHandle;
struct RyoikiGestureRecordingPlaybackHandle;
struct RyoikiHandStateSnapshot
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t timestamp_us;
    std::uint32_t count;
    std::uint32_t flags;
    RyoikiHandState states[kRyoikiMaxHandStates];
};
struct RyoikiHandEventBatch
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t next_sequence;
    std::uint64_t dropped_count;
    std::uint32_t count;
    std::uint32_t flags;
    RyoikiHandEvent events[kRyoikiMaxHandEventsPerBatch];
};
struct RyoikiMetrics
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t capture_timestamp_us;
    double runtime_seconds;
    double camera_fps;
    double display_fps;
    double perception_fps;
    double camera_wait_ms;
    double frame_copy_ms;
    double preprocess_ms;
    double palm_inference_ms;
    double palm_postprocess_ms;
    double roi_crop_warp_ms;
    double hand_inference_ms;
    double landmark_postprocess_ms;
    double tracking_update_ms;
    double camera_upload_ms;
    double camera_draw_ms;
    double overlay_draw_ms;
    double hand_3d_draw_ms;
    double end_draw_ms;
    double present_wait_ms;
    double overlay_render_ms;
    double end_to_end_latency_ms;
    double native_overhead_ms;
    std::uint64_t frame_pool_dropped_frames;
    std::uint64_t perception_dropped_frames;
    std::uint64_t gpu_camera_frames;
    std::uint64_t gpu_rendered_frames;
    std::uint32_t gpu_camera_dxgi_format;
    std::uint32_t gpu_camera_subresource;
};
struct RyoikiHandResult
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t capture_timestamp_us;
    std::int32_t hand_count;
    float confidence;
    float handedness;
    float bbox[4];
    float landmarks[21 * 3];
    float world_landmarks[21 * 3];
    float palm_normal[3];
    float palm_rotation_basis[3 * 3];
    float palm_center[3];
    float palm_scale;
    std::int32_t palm_pose_valid;
    float screen_palm_center[2];
    float screen_palm_scale;
    std::int32_t screen_palm_valid;
    float palm_relative_rotation[3 * 3];
    float palm_rotation_fit_error;
    std::int32_t palm_relative_rotation_valid;
    float domain_sign_confidence;
    std::int32_t domain_sign_detected;
    float domain_sign_features[6];
};
struct RyoikiHandsResult
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t capture_timestamp_us;
    std::uint32_t hand_count;
    std::uint32_t flags;
    std::uint32_t crossing_owner_track_id;
    std::uint32_t reserved;
    RyoikiObservedHand hands[kRyoikiMaxHands];
};
struct RyoikiHandTopologySnapshot
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t capture_timestamp_us;
    std::uint32_t summary_count;
    std::uint32_t reserved;
    RyoikiHandTopologySummary summaries[kRyoikiMaxHands];
    RyoikiTwoHandRelation relation;
};
struct RyoikiPalmResult
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::int32_t palm_count;
    float confidence;
    float bbox[4];
    float keypoints[7 * 2];
};
struct RyoikiGestureRecognitionSnapshot
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t timestamp_us;
    std::uint64_t best_candidate_start_timestamp_us;
    std::uint64_t best_candidate_end_timestamp_us;
    std::uint32_t track_id;
    std::uint32_t has_result;
    std::uint32_t template_count;
    std::uint32_t candidate_count;
    std::uint32_t best_template_id;
    std::uint32_t best_candidate_duration_ms;
    std::uint32_t best_eligible;
    std::uint32_t best_usable_frame_count;
    std::uint32_t best_source_frame_count;
    std::uint32_t best_active_segment_valid;
    float best_score;
    float best_confidence;
    float best_warp_ratio;
    std::uint32_t best_has_warp_ratio;
    float best_reverse_score;
    std::uint32_t best_has_reverse_score;
    float best_active_segment_path_velocity;
    std::uint32_t last_registration_status;
    std::uint32_t last_registration_template_id;
    char best_rejection_reason[128];
    char last_registration_reason[128];
    std::uint32_t reserved[4];
};
struct RyoikiGestureRecordingStatus
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint32_t state;
    std::uint32_t track_id;
    std::uint64_t began_frame_id;
    std::uint64_t began_timestamp_us;
    std::uint64_t last_frame_id;
    std::uint64_t last_timestamp_us;
    std::uint32_t sample_count;
    std::uint32_t usable_sample_count;
    std::uint32_t last_result_template_id;
    std::uint32_t current_take;
    char rejection_reason[128];
    std::uint32_t accepted_take_count;
    std::uint32_t required_take_count;
    std::uint32_t attempt_count;
    std::uint32_t reserved[1];
};
struct RyoikiGestureDefinitionList { std::uint32_t abi_version; std::uint32_t struct_size; std::uint32_t count; RyoikiGestureDefinitionMetadata items[kRyoikiMaxGestureDefinitions]; char error[128]; };
struct RyoikiGestureRecordingList
{
    std::uint32_t abi_version; std::uint32_t struct_size; std::uint32_t count; std::uint32_t reserved0;
    RyoikiGestureRecordingMetadata items[kRyoikiMaxGestureRecordings]; char error[128];
};
struct RyoikiGesturePlaybackStatus
{
    std::uint32_t abi_version; std::uint32_t struct_size; std::uint32_t definition_id;
    std::uint32_t take_index; std::uint32_t playing; std::uint32_t frame_index;
    std::uint32_t frame_count; float normalized_progress; double duration_ms; double position_ms;
};
struct RyoikiGestureBindingList { std::uint32_t abi_version; std::uint32_t struct_size; std::uint32_t count; RyoikiGestureBindingMetadata items[kRyoikiMaxGestureDefinitions]; char error[128]; };
struct RyoikiGestureDtwDebugSnapshot
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::uint64_t timestamp_us;
    std::uint32_t template_id;
    std::uint32_t candidate_duration_ms;
    std::uint32_t eligible;
    std::uint32_t path_count;
    float score;
    float confidence;
    float threshold_score;
    float warp_ratio;
    float reverse_score;
    std::uint32_t has_warp_ratio;
    std::uint32_t has_reverse_score;
    std::uint32_t reserved0;
    float score_breakdown[12];
    std::uint8_t candidate_indices[kRyoikiMaxGestureDtwPathPoints];
    std::uint8_t template_indices[kRyoikiMaxGestureDtwPathPoints];
    char rejection_reason[128];
    std::uint32_t reserved[4];
};
struct RyoikiCadHandInteractionResult
{
    std::uint32_t abi_version;
    std::uint32_t struct_size;
    std::uint64_t frame_id;
    std::int32_t state;
    std::int32_t view_changed;
    float yaw_radians;
    float pitch_radians;
    float zoom;
    float pan_x;
    float pan_y;
    float yaw_delta_degrees;
    float pitch_delta_degrees;
};
RYOIKI_EXPORT std::uint32_t ryoiki_get_abi_version();
RYOIKI_EXPORT RyoikiHandle* ryoiki_create(void* parent_hwnd);
RYOIKI_EXPORT std::int32_t ryoiki_start(RyoikiHandle* handle);
RYOIKI_EXPORT void ryoiki_stop(RyoikiHandle* handle);
RYOIKI_EXPORT std::int32_t ryoiki_resize(
    RyoikiHandle* handle,
    std::int32_t width,
    std::int32_t height);
RYOIKI_EXPORT void ryoiki_destroy(RyoikiHandle* handle);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_metrics(RyoikiHandle* handle, RyoikiMetrics* out_metrics);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_palm(RyoikiHandle* handle, RyoikiPalmResult* out_result);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_hand(RyoikiHandle* handle, RyoikiHandResult* out_result);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_hands(
    RyoikiHandle* handle,
    RyoikiHandsResult* out_result);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_hand_topology(
    RyoikiHandle* handle,
    RyoikiHandTopologySnapshot* out_snapshot);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_states(
    RyoikiHandle* handle,
    RyoikiHandStateSnapshot* out_snapshot);
RYOIKI_EXPORT std::int32_t ryoiki_read_hand_events(
    RyoikiHandle* handle,
    std::uint64_t after_sequence,
    RyoikiHandEventBatch* out_batch);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_gesture_recognition(
    RyoikiHandle* handle,
    RyoikiGestureRecognitionSnapshot* out_snapshot);
RYOIKI_EXPORT std::int32_t ryoiki_get_latest_gesture_dtw_debug(
    RyoikiHandle* handle,
    RyoikiGestureDtwDebugSnapshot* out_snapshot);
RYOIKI_EXPORT std::int32_t ryoiki_request_gesture_template_registration(
    RyoikiHandle* handle,
    std::uint32_t track_id,
    std::uint32_t template_id);
RYOIKI_EXPORT std::int32_t ryoiki_list_gesture_definitions(RyoikiHandle*,RyoikiGestureDefinitionList*);
RYOIKI_EXPORT std::int32_t ryoiki_set_gesture_definition_metadata(RyoikiHandle*,std::uint32_t,const char*,std::uint32_t);
RYOIKI_EXPORT std::int32_t ryoiki_delete_gesture_definition(RyoikiHandle*,std::uint32_t);
RYOIKI_EXPORT std::int32_t ryoiki_reload_gesture_definitions(RyoikiHandle*);
RYOIKI_EXPORT std::int32_t ryoiki_list_gesture_recordings(
    RyoikiHandle*, std::uint32_t, RyoikiGestureRecordingList*);
RYOIKI_EXPORT std::int32_t ryoiki_export_gesture_recording(
    RyoikiHandle*, std::uint32_t, std::uint32_t, const char*);
RYOIKI_EXPORT std::int32_t ryoiki_list_gesture_bindings(RyoikiHandle*,RyoikiGestureBindingList*);
RYOIKI_EXPORT std::int32_t ryoiki_upsert_gesture_binding(RyoikiHandle*,std::uint32_t,const char*,const char*,std::uint32_t);
RYOIKI_EXPORT std::int32_t ryoiki_delete_gesture_binding(RyoikiHandle*,std::uint32_t);
RYOIKI_EXPORT std::int32_t ryoiki_begin_gesture_recording(
    RyoikiHandle* handle,
    std::uint32_t template_id);
RYOIKI_EXPORT std::int32_t ryoiki_finish_gesture_recording(RyoikiHandle* handle);
RYOIKI_EXPORT std::int32_t ryoiki_cancel_gesture_recording(RyoikiHandle* handle);
RYOIKI_EXPORT std::int32_t ryoiki_get_gesture_recording_status(
    RyoikiHandle* handle,
    RyoikiGestureRecordingStatus* out_status);
RYOIKI_EXPORT std::int32_t ryoiki_capture_palm_rotation_reference(RyoikiHandle* handle);
RYOIKI_EXPORT std::int32_t ryoiki_set_hand_presentation_mode(
    RyoikiHandle* handle,
    std::int32_t presentation_mode);
RYOIKI_EXPORT std::int32_t ryoiki_configure_cad_hand_interaction(
    RyoikiHandle* vision_handle,
    RyoikiCadHandle* cad_handle,
    std::int32_t interaction_mode,
    std::int32_t presentation_mode,
    float rotation_sensitivity);
RYOIKI_EXPORT std::int32_t ryoiki_get_cad_hand_interaction(
    RyoikiHandle* vision_handle,
    RyoikiCadHandInteractionResult* out_result);
RYOIKI_EXPORT std::int32_t ryoiki_get_last_error(
    RyoikiHandle* handle,
    char* buffer,
    std::int32_t buffer_length);
RYOIKI_EXPORT RyoikiCadHandle* ryoiki_cad_create(void* parent_hwnd);
RYOIKI_EXPORT std::int32_t ryoiki_cad_resize(
    RyoikiCadHandle* handle,
    std::int32_t width,
    std::int32_t height);
RYOIKI_EXPORT std::int32_t ryoiki_cad_set_view(
    RyoikiCadHandle* handle,
    float yaw_radians,
    float pitch_radians,
    float zoom);
RYOIKI_EXPORT std::int32_t ryoiki_cad_get_view(
    RyoikiCadHandle* handle,
    float* out_yaw_radians,
    float* out_pitch_radians,
    float* out_zoom);
RYOIKI_EXPORT std::int32_t ryoiki_cad_set_view_ex(
    RyoikiCadHandle* handle,
    float yaw_radians,
    float pitch_radians,
    float zoom,
    float pan_x,
    float pan_y);
RYOIKI_EXPORT std::int32_t ryoiki_cad_get_view_ex(
    RyoikiCadHandle* handle,
    float* out_yaw_radians,
    float* out_pitch_radians,
    float* out_zoom,
    float* out_pan_x,
    float* out_pan_y);
RYOIKI_EXPORT void ryoiki_cad_reset_view(RyoikiCadHandle* handle);
RYOIKI_EXPORT void ryoiki_cad_destroy(RyoikiCadHandle* handle);
RYOIKI_EXPORT RyoikiGestureDtwDebugHandle* ryoiki_dtw_debug_create(
    void* parent_hwnd, RyoikiHandle* source);
RYOIKI_EXPORT std::int32_t ryoiki_dtw_debug_resize(
    RyoikiGestureDtwDebugHandle* handle, std::int32_t width, std::int32_t height);
RYOIKI_EXPORT std::int32_t ryoiki_dtw_debug_get_last_error(
    RyoikiGestureDtwDebugHandle* handle, char* buffer, std::int32_t length);
RYOIKI_EXPORT void ryoiki_dtw_debug_destroy(RyoikiGestureDtwDebugHandle* handle);
RYOIKI_EXPORT RyoikiGestureRecordingPlaybackHandle* ryoiki_recording_playback_create(
    void* parent_hwnd, RyoikiHandle* source);
RYOIKI_EXPORT std::int32_t ryoiki_recording_playback_resize(
    RyoikiGestureRecordingPlaybackHandle*, std::int32_t, std::int32_t);
RYOIKI_EXPORT std::int32_t ryoiki_recording_playback_select(
    RyoikiGestureRecordingPlaybackHandle*, std::uint32_t, std::uint32_t);
RYOIKI_EXPORT std::int32_t ryoiki_recording_playback_set_playing(
    RyoikiGestureRecordingPlaybackHandle*, std::uint32_t);
RYOIKI_EXPORT std::int32_t ryoiki_recording_playback_seek(
    RyoikiGestureRecordingPlaybackHandle*, float);
RYOIKI_EXPORT std::int32_t ryoiki_recording_playback_get_status(
    RyoikiGestureRecordingPlaybackHandle*, RyoikiGesturePlaybackStatus*);
RYOIKI_EXPORT std::int32_t ryoiki_recording_playback_get_last_error(
    RyoikiGestureRecordingPlaybackHandle*, char*, std::int32_t);
RYOIKI_EXPORT void ryoiki_recording_playback_destroy(RyoikiGestureRecordingPlaybackHandle*);
RYOIKI_EXPORT std::int32_t ryoiki_cad_get_last_error(
    RyoikiCadHandle* handle,
    char* buffer,
    std::int32_t buffer_length);