src/RyoikiTenkai.Wpf/Native/NativeVisionInterop.cs

using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;
using System.Text;

namespace RyoikiTenkai.Wpf.Native;

internal static partial class NativeVisionInterop
{
    public const string LibraryName = "RyoikiTenkai.Native";
    public const uint AbiVersion = 29;
    public const int MaxGestureRecordings = 3;
    public const int MaxGestureDefinitions = 8;
    public const int MaxHands = 2;
    public const uint DomainExpansionStateId = 1;

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_abi_version")]
    public static partial uint GetAbiVersion();

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_create")]
    public static partial IntPtr Create(IntPtr parentHwnd);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_start")]
    public static partial int Start(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_stop")]
    public static partial void Stop(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_resize")]
    public static partial int Resize(IntPtr handle, int width, int height);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_destroy")]
    public static partial void Destroy(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_create")]
    public static partial IntPtr CreateCad(IntPtr parentHwnd);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_resize")]
    public static partial int ResizeCad(IntPtr handle, int width, int height);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_set_view")]
    public static partial int SetCadView(IntPtr handle, float yawRadians, float pitchRadians, float zoom);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_get_view")]
    public static partial int GetCadView(IntPtr handle, out float yawRadians, out float pitchRadians, out float zoom);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_set_view_ex")]
    public static partial int SetCadViewEx(
        IntPtr handle,
        float yawRadians,
        float pitchRadians,
        float zoom,
        float panX,
        float panY);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_get_view_ex")]
    public static partial int GetCadViewEx(
        IntPtr handle,
        out float yawRadians,
        out float pitchRadians,
        out float zoom,
        out float panX,
        out float panY);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_reset_view")]
    public static partial void ResetCadView(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cad_destroy")]
    public static partial void DestroyCad(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_dtw_debug_create")]
    public static partial IntPtr CreateDtwDebug(IntPtr parentHwnd, IntPtr sourceHandle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_dtw_debug_resize")]
    public static partial int ResizeDtwDebug(IntPtr handle, int width, int height);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_dtw_debug_destroy")]
    public static partial void DestroyDtwDebug(IntPtr handle);

    [DllImport(LibraryName, EntryPoint = "ryoiki_dtw_debug_get_last_error")]
    private static extern int GetDtwDebugLastError(IntPtr handle, byte[] buffer, int bufferLength);

    public static string GetDtwDebugLastErrorMessage(IntPtr handle)
    {
        var buffer = new byte[1024];
        if (GetDtwDebugLastError(handle, buffer, buffer.Length) == 0) return string.Empty;
        var length = Array.IndexOf(buffer, (byte)0);
        return Encoding.UTF8.GetString(buffer, 0, length < 0 ? buffer.Length : length);
    }

    [DllImport(LibraryName, EntryPoint = "ryoiki_cad_get_last_error")]
    private static extern int GetCadLastError(IntPtr handle, byte[] buffer, int bufferLength);

    public static string GetCadLastErrorMessage(IntPtr handle)
    {
        var buffer = new byte[1024];
        if (GetCadLastError(handle, buffer, buffer.Length) == 0) return string.Empty;
        var length = Array.IndexOf(buffer, (byte)0);
        return Encoding.UTF8.GetString(buffer, 0, length < 0 ? buffer.Length : length);
    }

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_metrics")]
    public static partial int GetLatestMetrics(IntPtr handle, out NativeVisionMetrics metrics);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_palm")]
    public static partial int GetLatestPalm(IntPtr handle, out NativePalmResult result);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_hand")]
    public static partial int GetLatestHand(IntPtr handle, out NativeHandResult result);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_hands")]
    public static partial int GetLatestHands(IntPtr handle, out NativeHandsResult result);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_hand_topology")]
    public static partial int GetLatestHandTopology(IntPtr handle, out NativeHandTopologySnapshot snapshot);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_gesture_recognition")]
    public static partial int GetLatestGestureRecognition(IntPtr handle, out NativeGestureRecognitionSnapshot snapshot);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_gesture_dtw_debug")]
    public static partial int GetLatestGestureDtwDebug(IntPtr handle, out NativeGestureDtwDebugSnapshot snapshot);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_request_gesture_template_registration")]
    public static partial int RequestGestureTemplateRegistration(IntPtr handle, uint trackId, uint templateId);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_begin_gesture_recording")]
    public static partial int BeginGestureRecording(IntPtr handle, uint templateId);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_finish_gesture_recording")]
    public static partial int FinishGestureRecording(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_cancel_gesture_recording")]
    public static partial int CancelGestureRecording(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_gesture_recording_status")]
    public static partial int GetGestureRecordingStatus(IntPtr handle, out NativeGestureRecordingStatus status);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_list_gesture_definitions")]
    public static partial int ListGestureDefinitions(
        IntPtr handle,
        out NativeGestureDefinitionList definitions);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_set_gesture_definition_metadata",
        StringMarshalling = StringMarshalling.Utf8)]
    public static partial int SetGestureDefinitionMetadata(
        IntPtr handle,
        uint definitionId,
        string name,
        uint enabled);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_delete_gesture_definition")]
    public static partial int DeleteGestureDefinition(IntPtr handle, uint definitionId);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_reload_gesture_definitions")]
    public static partial int ReloadGestureDefinitions(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_list_gesture_recordings")]
    public static partial int ListGestureRecordings(
        IntPtr handle, uint definitionId, out NativeGestureRecordingList recordings);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_export_gesture_recording",
        StringMarshalling = StringMarshalling.Utf8)]
    public static partial int ExportGestureRecording(
        IntPtr handle, uint definitionId, uint takeIndex, string path);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_create")]
    public static partial IntPtr CreateRecordingPlayback(IntPtr parentHwnd, IntPtr sourceHandle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_resize")]
    public static partial int ResizeRecordingPlayback(IntPtr handle, int width, int height);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_select")]
    public static partial int SelectRecordingPlayback(IntPtr handle, uint definitionId, uint takeIndex);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_set_playing")]
    public static partial int SetRecordingPlaybackPlaying(IntPtr handle, uint playing);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_seek")]
    public static partial int SeekRecordingPlayback(IntPtr handle, float normalizedProgress);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_get_status")]
    public static partial int GetRecordingPlaybackStatus(
        IntPtr handle, out NativeGesturePlaybackStatus status);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_recording_playback_destroy")]
    public static partial void DestroyRecordingPlayback(IntPtr handle);

    [DllImport(LibraryName, EntryPoint = "ryoiki_recording_playback_get_last_error")]
    private static extern int GetRecordingPlaybackLastError(IntPtr handle, byte[] buffer, int bufferLength);

    public static string GetRecordingPlaybackLastErrorMessage(IntPtr handle)
    {
        var buffer = new byte[1024];
        if (GetRecordingPlaybackLastError(handle, buffer, buffer.Length) == 0) return string.Empty;
        var length = Array.IndexOf(buffer, (byte)0);
        return Encoding.UTF8.GetString(buffer, 0, length < 0 ? buffer.Length : length);
    }

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_list_gesture_bindings")]
    public static partial int ListGestureBindings(IntPtr handle, out NativeGestureBindingList bindings);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_upsert_gesture_binding",
        StringMarshalling = StringMarshalling.Utf8)]
    public static partial int UpsertGestureBinding(IntPtr handle, uint definitionId,
        string actionType, string actionParameter, uint enabled);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_delete_gesture_binding")]
    public static partial int DeleteGestureBinding(IntPtr handle, uint definitionId);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_latest_states")]
    public static partial int GetLatestStates(IntPtr handle, out NativeHandStateSnapshot snapshot);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_read_hand_events")]
    public static partial int ReadHandEvents(
        IntPtr handle,
        ulong afterSequence,
        out NativeHandEventBatch batch);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_capture_palm_rotation_reference")]
    public static partial int CapturePalmRotationReference(IntPtr handle);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_set_hand_presentation_mode")]
    public static partial int SetHandPresentationMode(
        IntPtr handle,
        int presentationMode);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_configure_cad_hand_interaction")]
    public static partial int ConfigureCadHandInteraction(
        IntPtr visionHandle,
        IntPtr cadHandle,
        int interactionMode,
        int presentationMode,
        float rotationSensitivity);

    [LibraryImport(LibraryName, EntryPoint = "ryoiki_get_cad_hand_interaction")]
    public static partial int GetCadHandInteraction(
        IntPtr visionHandle,
        out NativeCadHandInteractionResult result);

    [DllImport(LibraryName, EntryPoint = "ryoiki_get_last_error")]
    private static extern int GetLastError(IntPtr handle, byte[] buffer, int bufferLength);

    public static string GetLastErrorMessage(IntPtr handle)
    {
        var buffer = new byte[1024];
        if (GetLastError(handle, buffer, buffer.Length) == 0)
        {
            return string.Empty;
        }

        var length = Array.IndexOf(buffer, (byte)0);
        if (length < 0)
        {
            length = buffer.Length;
        }

        return length > 0
            ? Encoding.UTF8.GetString(buffer, 0, length)
            : string.Empty;
    }
}
